// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation should call default props onMenuToggle function when no onMenuToggle property is passed 1`] = `
<nav
  className="sc-fzoLsD jdTPUr"
>
  <button
    className="sc-fzpans doEGPR sc-AxmLO louqpj"
    color=""
    data-button-test={true}
    onClick={[Function]}
    type="button"
  >
    
    <span
      className="sc-fzplWN jHzZQp sc-AxjAm jWlVxK lni lni-close"
    />
  </button>
  <ul
    className="sc-AxhUy ijoyzq"
  >
    <li
      className="sc-AxgMl fdAvPR"
    >
      <div
        className="sc-AxiKw iCNkRr"
        fontFamily="exo"
        size="normal"
      >
        <a
          href="#home"
        >
          <div
            className="sc-AxheI dkiJtT"
          >
            <span
              className="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-home"
            />
            <span
              className="sc-Axmtr hZKuXu menu-text"
            >
              Home
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      className="sc-AxgMl fdAvPR"
    >
      <div
        className="sc-AxiKw iCNkRr"
        fontFamily="exo"
        size="normal"
      >
        <a
          href="#users"
        >
          <div
            className="sc-AxheI dkiJtT"
          >
            <span
              className="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-users"
            />
            <span
              className="sc-Axmtr hZKuXu menu-text"
            >
              Users
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      className="sc-AxgMl fdAvPR"
    >
      <div
        className="sc-AxiKw iCNkRr"
        fontFamily="exo"
        size="normal"
      >
        <a
          href="#devices"
        >
          <div
            className="sc-AxheI dkiJtT"
          >
            <span
              className="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-rocket"
            />
            <span
              className="sc-Axmtr hZKuXu menu-text"
            >
              Devices
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      className="sc-AxgMl fdAvPR"
    >
      <div
        className="sc-AxiKw iCNkRr"
        fontFamily="exo"
        size="normal"
      >
        <a
          href="#costs"
        >
          <div
            className="sc-AxheI dkiJtT"
          >
            <span
              className="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-briefcase"
            />
            <span
              className="sc-Axmtr hZKuXu menu-text"
            >
              Costs
            </span>
          </div>
        </a>
      </div>
    </li>
  </ul>
</nav>
`;

exports[`Navigation should have menu toggle event listener 1`] = `
<nav
  className="sc-fzoLsD jdTPUr"
>
  <button
    className="sc-fzpans doEGPR sc-AxmLO louqpj"
    color=""
    data-button-test={true}
    onClick={[Function]}
    type="button"
  >
    
    <span
      className="sc-fzplWN jHzZQp sc-AxjAm jWlVxK lni lni-close"
    />
  </button>
  <ul
    className="sc-AxhUy ijoyzq"
  >
    <li
      className="sc-AxgMl fdAvPR"
    >
      <div
        className="sc-AxiKw iCNkRr"
        fontFamily="exo"
        size="normal"
      >
        <a
          href="#home"
        >
          <div
            className="sc-AxheI dkiJtT"
          >
            <span
              className="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-home"
            />
            <span
              className="sc-Axmtr hZKuXu menu-text"
            >
              Home
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      className="sc-AxgMl fdAvPR"
    >
      <div
        className="sc-AxiKw iCNkRr"
        fontFamily="exo"
        size="normal"
      >
        <a
          href="#users"
        >
          <div
            className="sc-AxheI dkiJtT"
          >
            <span
              className="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-users"
            />
            <span
              className="sc-Axmtr hZKuXu menu-text"
            >
              Users
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      className="sc-AxgMl fdAvPR"
    >
      <div
        className="sc-AxiKw iCNkRr"
        fontFamily="exo"
        size="normal"
      >
        <a
          href="#devices"
        >
          <div
            className="sc-AxheI dkiJtT"
          >
            <span
              className="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-rocket"
            />
            <span
              className="sc-Axmtr hZKuXu menu-text"
            >
              Devices
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      className="sc-AxgMl fdAvPR"
    >
      <div
        className="sc-AxiKw iCNkRr"
        fontFamily="exo"
        size="normal"
      >
        <a
          href="#costs"
        >
          <div
            className="sc-AxheI dkiJtT"
          >
            <span
              className="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-briefcase"
            />
            <span
              className="sc-Axmtr hZKuXu menu-text"
            >
              Costs
            </span>
          </div>
        </a>
      </div>
    </li>
  </ul>
</nav>
`;

exports[`Navigation should render 1`] = `
<nav
  className="sc-fzoLsD jdTPUr"
>
  <button
    className="sc-fzpans doEGPR sc-AxmLO louqpj"
    color=""
    data-button-test={true}
    onClick={[Function]}
    type="button"
  >
    
    <span
      className="sc-fzplWN jHzZQp sc-AxjAm jWlVxK lni lni-close"
    />
  </button>
  
</nav>
`;

exports[`Navigation should render children menu 1`] = `
<nav
  className="sc-fzoLsD jdTPUr"
>
  <button
    className="sc-fzpans doEGPR sc-AxmLO louqpj"
    color=""
    data-button-test={true}
    onClick={[Function]}
    type="button"
  >
    
    <span
      className="sc-fzplWN jHzZQp sc-AxjAm jWlVxK lni lni-close"
    />
  </button>
  <ul
    className="sc-AxhUy ijoyzq"
  >
    <li
      className="sc-AxgMl fdAvPR"
    >
      <div
        className="sc-AxiKw iCNkRr"
        fontFamily="exo"
        size="normal"
      >
        <a
          href="#home"
        >
          <div
            className="sc-AxheI dkiJtT"
          >
            <span
              className="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-home"
            />
            <span
              className="sc-Axmtr hZKuXu menu-text"
            >
              Home
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      className="sc-AxgMl fdAvPR"
    >
      <div
        className="sc-AxiKw iCNkRr"
        fontFamily="exo"
        size="normal"
      >
        <a
          href="#users"
        >
          <div
            className="sc-AxheI dkiJtT"
          >
            <span
              className="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-users"
            />
            <span
              className="sc-Axmtr hZKuXu menu-text"
            >
              Users
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      className="sc-AxgMl fdAvPR"
    >
      <div
        className="sc-AxiKw iCNkRr"
        fontFamily="exo"
        size="normal"
      >
        <a
          href="#devices"
        >
          <div
            className="sc-AxheI dkiJtT"
          >
            <span
              className="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-rocket"
            />
            <span
              className="sc-Axmtr hZKuXu menu-text"
            >
              Devices
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      className="sc-AxgMl fdAvPR"
    >
      <div
        className="sc-AxiKw iCNkRr"
        fontFamily="exo"
        size="normal"
      >
        <a
          href="#costs"
        >
          <div
            className="sc-AxheI dkiJtT"
          >
            <span
              className="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-briefcase"
            />
            <span
              className="sc-Axmtr hZKuXu menu-text"
            >
              Costs
            </span>
          </div>
        </a>
      </div>
    </li>
  </ul>
</nav>
`;

exports[`Navigation should render children menu closed when given appropriate property 1`] = `
<nav
  className="sc-fzoLsD jdTPUr"
>
  <button
    className="sc-fzpans doEGPR sc-AxmLO louqpj"
    color=""
    data-button-test={true}
    onClick={[Function]}
    type="button"
  >
    
    <span
      className="sc-fzplWN jHzZQp sc-AxjAm jWlVxK lni lni-menu"
    />
  </button>
  <ul
    className="sc-AxhUy ijoyzq"
  >
    <li
      className="sc-AxgMl fdAvPR"
    >
      <div
        className="sc-AxiKw iCNkRr"
        fontFamily="exo"
        size="normal"
      >
        <a
          href="#home"
        >
          <div
            className="sc-AxheI dkiJtT"
          >
            <span
              className="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-home"
            />
            <span
              className="sc-Axmtr hZKuXu menu-text"
            >
              Home
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      className="sc-AxgMl fdAvPR"
    >
      <div
        className="sc-AxiKw iCNkRr"
        fontFamily="exo"
        size="normal"
      >
        <a
          href="#users"
        >
          <div
            className="sc-AxheI dkiJtT"
          >
            <span
              className="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-users"
            />
            <span
              className="sc-Axmtr hZKuXu menu-text"
            >
              Users
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      className="sc-AxgMl fdAvPR"
    >
      <div
        className="sc-AxiKw iCNkRr"
        fontFamily="exo"
        size="normal"
      >
        <a
          href="#devices"
        >
          <div
            className="sc-AxheI dkiJtT"
          >
            <span
              className="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-rocket"
            />
            <span
              className="sc-Axmtr hZKuXu menu-text"
            >
              Devices
            </span>
          </div>
        </a>
      </div>
    </li>
    <li
      className="sc-AxgMl fdAvPR"
    >
      <div
        className="sc-AxiKw iCNkRr"
        fontFamily="exo"
        size="normal"
      >
        <a
          href="#costs"
        >
          <div
            className="sc-AxheI dkiJtT"
          >
            <span
              className="sc-AxhCb hAhMuW sc-AxjAm jWlVxK lni lni-briefcase"
            />
            <span
              className="sc-Axmtr hZKuXu menu-text"
            >
              Costs
            </span>
          </div>
        </a>
      </div>
    </li>
  </ul>
</nav>
`;
